# DepsTrack

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
depstrack/: cli.py
